--- a/projects/pezevents/src/app/features/home/components/business/business.component.html
+++ b/projects/pezevents/src/app/features/home/components/business/business.component.html
@@ -12,8 +12,9 @@
         </mat-card>
 
 
-        <app-calendar-header [(view)]="view" [(viewDate)]="viewDate"></app-calendar-header>
-        <app-calendar [view]="view" [viewDate]="viewDate" [events]="events" [activeDayIsOpen]="true"></app-calendar>
+        <!-- <app-calendar-header [(view)]="view" [(viewDate)]="viewDate"></app-calendar-header>
+        <app-calendar [view]="view" [viewDate]="viewDate" [events]="events" [activeDayIsOpen]="true"></app-calendar> -->
+        <full-calendar [options]="calendarOptions"></full-calendar>
 
 
         <p>business works!</p>
