--- a/projects/pezevents/src/app/features/home/components/home-page/home-page.component.html
+++ b/projects/pezevents/src/app/features/home/components/home-page/home-page.component.html
@@ -1,48 +1,3 @@
 <div class="container py-2">
-    <header>
-        <h1>
-            Businesses
-        </h1>
-    </header>
-    <main>
-        <mat-grid-list cols="2" rowHeight="2:1">
-            <!-- loop tiles for number of bussinesses -->
-            <mat-grid-tile *ngFor="let business of userBusinesses$ | async" [id]="business.id">
-                <mat-card>
-                    <mat-card-header>
-                        <div mat-card-avatar class="example-header-image"></div>
-                        <mat-card-title>{{business.displayName}}</mat-card-title>
-                        <mat-card-subtitle>{{business.role}}</mat-card-subtitle>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p>
-                            {{business.description}}
-                        </p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <a [routerLink]="['business', business.id]" mat-button>View</a>
-                        <!-- TODO: add defaulting business value -->
-                    </mat-card-actions>
-                </mat-card>
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <mat-card>
-                    <mat-card-header>
-                        <div mat-card-avatar class="example-header-image"></div>
-                        <mat-card-title>Add a business?</mat-card-title>
-                        <mat-card-subtitle>current users role description</mat-card-subtitle>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p>
-                            Click "Add" to create a new business and start organizing events!
-                        </p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button mat-button color="primary">Add</button>
-                        <!-- TODO: add defaulting business value -->
-                    </mat-card-actions>
-                </mat-card>
-            </mat-grid-tile>
-        </mat-grid-list>
-    </main>
+    <router-outlet></router-outlet>
 </div>
